# art-finder

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
art_finder/: __init__.py  models.py
art_finder/adapters/: __init__.py  aic.py  base.py  cma.py
art_finder/mappings/: __init__.py  departments.py
